# Footstep_Affordance

./: CMakeLists.txt  README.md  package.xml
include/: data.hpp  features.hpp  footstepAffordance.hpp  interface.hpp
src/: features.cpp  footstepAffordance.cpp  interface.cpp
